{
  "version": 4,
  "terraform_version": "1.8.3",
  "serial": 325,
  "lineage": "5ba1689e-365e-4745-45a8-932429698f3b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "just-ec2-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:780709724618:loadbalancer/app/just-services-ec2-dev-lb/a80978ada9b7822a",
            "arn_suffix": "app/just-services-ec2-dev-lb/a80978ada9b7822a",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "just-services-ec2-dev-lb-1060995860.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:780709724618:loadbalancer/app/just-services-ec2-dev-lb/a80978ada9b7822a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "just-services-ec2-dev-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-066ea3fec1eda2b7c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06a113db1fb7096e6"
              },
              {
                "subnet_id": "subnet-078d397f7f2c12013"
              },
              {
                "subnet_id": "subnet-0c10cf68b30b153d2"
              }
            ],
            "subnets": [
              "subnet-06a113db1fb7096e6",
              "subnet-078d397f7f2c12013",
              "subnet-0c10cf68b30b153d2"
            ],
            "vpc_id": "vpc-0e8203e4b22e0ecd3",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.b2b_b2c_sg",
            "data.terraform_remote_state.vpc-dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "default_443_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:780709724618:listener/app/just-services-ec2-dev-lb/a80978ada9b7822a/1ba8c3d273a07e59",
            "certificate_arn": "arn:aws:acm:ap-south-1:780709724618:certificate/34b8243d-ed61-48d1-be1b-6cb7306411ad",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:780709724618:targetgroup/b2b-dev-tg/f9f5a434c5d199f2",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:780709724618:listener/app/just-services-ec2-dev-lb/a80978ada9b7822a/1ba8c3d273a07e59",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:780709724618:loadbalancer/app/just-services-ec2-dev-lb/a80978ada9b7822a",
            "mutual_authentication": [
              {
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.just-ec2-alb",
            "aws_lb_target_group.all-ec2-tg",
            "aws_security_group.b2b_b2c_sg",
            "data.terraform_remote_state.vpc-dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "default_80_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:780709724618:listener/app/just-services-ec2-dev-lb/a80978ada9b7822a/429110a261285ca1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:780709724618:listener/app/just-services-ec2-dev-lb/a80978ada9b7822a/429110a261285ca1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:780709724618:loadbalancer/app/just-services-ec2-dev-lb/a80978ada9b7822a",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.just-ec2-alb",
            "aws_security_group.b2b_b2c_sg",
            "data.terraform_remote_state.vpc-dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener_rule",
      "name": "all-443-port-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ec2-b2b-dev",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:780709724618:targetgroup/b2b-dev-tg/f9f5a434c5d199f2",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:780709724618:listener-rule/app/just-services-ec2-dev-lb/a80978ada9b7822a/1ba8c3d273a07e59/1cd97240fd41a0e5",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "dev-flt.justapi.in"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:780709724618:listener-rule/app/just-services-ec2-dev-lb/a80978ada9b7822a/1ba8c3d273a07e59/1cd97240fd41a0e5",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:780709724618:listener/app/just-services-ec2-dev-lb/a80978ada9b7822a/1ba8c3d273a07e59",
            "priority": 1,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.just-ec2-alb",
            "aws_alb_listener.default_443_listener",
            "aws_lb_target_group.all-ec2-tg",
            "aws_security_group.b2b_b2c_sg",
            "data.terraform_remote_state.vpc-dev"
          ]
        },
        {
          "index_key": "ec2-b2c-dev",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:780709724618:targetgroup/b2c-dev-tg/352c3c86cc11ba1a",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:780709724618:listener-rule/app/just-services-ec2-dev-lb/a80978ada9b7822a/1ba8c3d273a07e59/3eb10adc75a4abe0",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "devb2c-flt.justapi.in"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:780709724618:listener-rule/app/just-services-ec2-dev-lb/a80978ada9b7822a/1ba8c3d273a07e59/3eb10adc75a4abe0",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:780709724618:listener/app/just-services-ec2-dev-lb/a80978ada9b7822a/1ba8c3d273a07e59",
            "priority": 2,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.just-ec2-alb",
            "aws_alb_listener.default_443_listener",
            "aws_lb_target_group.all-ec2-tg",
            "aws_security_group.b2b_b2c_sg",
            "data.terraform_remote_state.vpc-dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Just-b2b-b2c-Dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ec2-b2b-dev",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e6abe4cea31dad34",
            "arn": "arn:aws:ec2:ap-south-1:780709724618:instance/i-0458592499a5c6d8c",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ssm-instance-profile",
            "id": "i-0458592499a5c6d8c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "devops_flt",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05fc7893cdb7d445b",
            "private_dns": "ip-10-16-76-73.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.16.76.73",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 120,
                "throughput": 0,
                "volume_id": "vol-0fc24d670f34303af",
                "volume_size": 40,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01a8fcbe0a3901be2",
            "tags": {
              "Name": "Just-b2b-Dev",
              "env": "dev"
            },
            "tags_all": {
              "Name": "Just-b2b-Dev",
              "env": "dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-066ea3fec1eda2b7c"
            ]
          },
          "dependencies": [
            "aws_security_group.b2b_b2c_sg",
            "data.terraform_remote_state.vpc-dev"
          ]
        },
        {
          "index_key": "ec2-b2c-dev",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01aba81a36f77dc9c",
            "arn": "arn:aws:ec2:ap-south-1:780709724618:instance/i-00ae44dbe0f833b09",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ssm-instance-profile",
            "id": "i-00ae44dbe0f833b09",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "devops_flt",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0705240f285cac871",
            "private_dns": "ip-10-16-88-43.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.16.88.43",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 210,
                "throughput": 0,
                "volume_id": "vol-091310b539d3a6ffb",
                "volume_size": 70,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01a8fcbe0a3901be2",
            "tags": {
              "Name": "Just-b2c-Dev",
              "env": "dev"
            },
            "tags_all": {
              "Name": "Just-b2c-Dev",
              "env": "dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-066ea3fec1eda2b7c"
            ]
          },
          "dependencies": [
            "aws_security_group.b2b_b2c_sg",
            "data.terraform_remote_state.vpc-dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_flt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e95ad8be7c4796dd",
            "arn": "arn:aws:ec2:ap-south-1:780709724618:instance/i-01cb17e4ee1c920e5",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ssm-instance-profile",
            "id": "i-01cb17e4ee1c920e5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devops_flt",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09f989ca78068fbcc",
            "private_dns": "ip-10-16-4-43.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.16.4.43",
            "public_dns": "ec2-65-2-10-117.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.2.10.117",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0007cc043df415c48",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06a113db1fb7096e6",
            "tags": {
              "Name": "Bijak-dev-bastion",
              "env": "dev"
            },
            "tags_all": {
              "Name": "Bijak-dev-bastion",
              "env": "dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a7685227b3dd5f5b",
              "sg-0b32e96e910ea00c2"
            ]
          },
          "dependencies": [
            "aws_security_group.bastion-sg",
            "aws_security_group.bitbucket_ips",
            "data.terraform_remote_state.vpc-dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "just_redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03e8edf5c236310e7",
            "arn": "arn:aws:ec2:ap-south-1:780709724618:instance/i-01d8a04a9df5f81f6",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ssm-instance-profile",
            "id": "i-01d8a04a9df5f81f6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devops_flt",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-059843896c03744b0",
            "private_dns": "ip-10-16-32-5.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.16.32.5",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00737396f0465e271",
                "volume_size": 12,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01608d42ded3178ae",
            "tags": {
              "Name": "Bijak-dev-redis-just",
              "env": "dev"
            },
            "tags_all": {
              "Name": "Bijak-dev-redis-just",
              "env": "dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0233a4cf1d927c784"
            ]
          },
          "dependencies": [
            "aws_security_group.just-redis-dev",
            "data.terraform_remote_state.vpc-dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "all-ec2-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ec2-b2b-dev",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:780709724618:targetgroup/b2b-dev-tg/f9f5a434c5d199f2",
            "arn_suffix": "targetgroup/b2b-dev-tg/f9f5a434c5d199f2",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200-350",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:780709724618:targetgroup/b2b-dev-tg/f9f5a434c5d199f2",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "b2b-dev-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e8203e4b22e0ecd3"
          },
          "dependencies": [
            "data.terraform_remote_state.vpc-dev"
          ]
        },
        {
          "index_key": "ec2-b2c-dev",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:780709724618:targetgroup/b2c-dev-tg/352c3c86cc11ba1a",
            "arn_suffix": "targetgroup/b2c-dev-tg/352c3c86cc11ba1a",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200-350",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:780709724618:targetgroup/b2c-dev-tg/352c3c86cc11ba1a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "b2c-dev-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e8203e4b22e0ecd3"
          },
          "dependencies": [
            "data.terraform_remote_state.vpc-dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "all-ec2-tg-attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ec2-b2b-dev",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:780709724618:targetgroup/b2b-dev-tg/f9f5a434c5d199f2-20240729070330248400000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:780709724618:targetgroup/b2b-dev-tg/f9f5a434c5d199f2",
            "target_id": "i-0458592499a5c6d8c"
          },
          "dependencies": [
            "aws_instance.Just-b2b-b2c-Dev",
            "aws_lb_target_group.all-ec2-tg",
            "aws_security_group.b2b_b2c_sg",
            "data.terraform_remote_state.vpc-dev"
          ]
        },
        {
          "index_key": "ec2-b2c-dev",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:780709724618:targetgroup/b2c-dev-tg/352c3c86cc11ba1a-20240729070330198800000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:780709724618:targetgroup/b2c-dev-tg/352c3c86cc11ba1a",
            "target_id": "i-00ae44dbe0f833b09"
          },
          "dependencies": [
            "aws_instance.Just-b2b-b2c-Dev",
            "aws_lb_target_group.all-ec2-tg",
            "aws_security_group.b2b_b2c_sg",
            "data.terraform_remote_state.vpc-dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "b2b_b2c_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:780709724618:security-group/sg-066ea3fec1eda2b7c",
            "description": "b2b_b2c_dev_sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-066ea3fec1eda2b7c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.16.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "b2b_b2c_dev_sg",
            "name_prefix": "",
            "owner_id": "780709724618",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "b2b_b2c_dev_sg"
            },
            "tags_all": {
              "Name": "b2b_b2c_dev_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e8203e4b22e0ecd3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.vpc-dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:780709724618:security-group/sg-0b32e96e910ea00c2",
            "description": "Bastion SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b32e96e910ea00c2",
            "ingress": [
              {
                "cidr_blocks": [
                  "3.109.127.79/32",
                  "65.1.61.129/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion_sg",
            "name_prefix": "",
            "owner_id": "780709724618",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "just_bastion_dev_sg"
            },
            "tags_all": {
              "Name": "just_bastion_dev_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e8203e4b22e0ecd3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.vpc-dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bitbucket_ips",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:780709724618:security-group/sg-0a7685227b3dd5f5b",
            "description": "Allow Bitbucket for deployment",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a7685227b3dd5f5b",
            "ingress": [
              {
                "cidr_blocks": [
                  "34.199.54.113/32",
                  "34.232.25.90/32",
                  "34.232.119.183/32",
                  "34.236.25.177/32",
                  "35.171.175.212/32",
                  "52.54.90.98/32",
                  "52.202.195.162/32",
                  "52.203.14.55/32",
                  "52.204.96.37/32",
                  "34.218.156.209/32",
                  "34.218.168.212/32",
                  "52.41.219.63/32",
                  "35.155.178.254/32",
                  "35.160.177.10/32",
                  "34.216.18.129/32",
                  "3.216.235.48/32",
                  "34.231.96.243/32",
                  "44.199.3.254/32",
                  "174.129.205.191/32",
                  "44.199.127.226/32",
                  "44.199.45.64/32",
                  "3.221.151.112/32",
                  "52.205.184.192/32",
                  "52.72.137.240/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bitbucket_ip_sg",
            "name_prefix": "",
            "owner_id": "780709724618",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bitbucket_ip_sg"
            },
            "tags_all": {
              "Name": "bitbucket_ip_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e8203e4b22e0ecd3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.vpc-dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "just-redis-dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:780709724618:security-group/sg-0233a4cf1d927c784",
            "description": "Allow database traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0233a4cf1d927c784",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.16.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.16.0.0/16"
                ],
                "description": "",
                "from_port": 6367,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6367
              }
            ],
            "name": "just_redis_dev_sg",
            "name_prefix": "",
            "owner_id": "780709724618",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "just_redis_dev_sg"
            },
            "tags_all": {
              "Name": "just_redis_dev_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e8203e4b22e0ecd3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.vpc-dev"
          ]
        }
      ]
    }
  ]
}